--- a/assets/component-menu-drawer.css
+++ b/assets/component-menu-drawer.css
@@ -24,6 +24,19 @@
   border-radius: 4px;
 }
 
+/* Icon toggle - show hamburger by default, close when drawer is open */
+.header__icon--menu .icon-close {
+  display: none;
+}
+
+.menu-drawer-container[open] .header__icon--menu .icon-hamburger {
+  display: none;
+}
+
+.menu-drawer-container[open] .header__icon--menu .icon-close {
+  display: block;
+}
+
 .js menu-drawer > details > summary::before,
 .js menu-drawer > details[open]:not(.menu-opening) > summary::before {
   content: '';
